--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,5 @@ python:
 install:
   - pip install -r requirements.txt
 
-# command to run tests
 script:
-  - python app/app_test.py
+  - python app/app_test.py && python app/app.py
